# autodiffcpp

./: .gitignore  CMakeLists.txt
include/autodiff/: autodiff.hpp
test/: test_autodiff.cpp
